# C-calc

./: .gitignore  CMakeLists.txt  Calculate.c  Calculate.h  Interface.c  Interface.h  Main.c  PVS-Studio.cmake  README.md  SortStation.c  SortStation.h  Stack.c  Stack.h  am_codestyle.xml  calc.c  calc.h  calc.sln  calc.vcxproj  data.c  data.h  main.c  other.c  other.h
assets/: am_codestyle.xml
headers/: Calculate.h  Convert.h  ConvertHelp.h  Operations.h  ProcessLine.h  SortStation.h  SortStationOther.h  Stack.h
sources/: Calculate.c  Convert.c  Main.c  ProcessLine.c  SortStation.c  Stack.c
src/: main.c
